@@ -1241,101 +1241,6 @@ void do_dir(
   process_opts(argc, vect, ji, data_type);
   }  /* END do_dir() */
 
-char *copy_env_value(
-
-  char *dest,      /* destination  */
-  char *pv,        /* value string */
-  int   quote_flg) /* non-zero then assume single word (quoting on) */
-
-  {
-  int go = 1;
-  int q_ch = 0;
-
-  while (*dest)
-    ++dest;
-
-  while (go && *pv)
-    {
-    switch (*pv)
-      {
-
-      case '"':
-
-      case '\'':
-
-        if (q_ch)
-          {
-          /* local quoting is in progress */
-
-          if (q_ch == (int)*pv)
-            {
-            q_ch = 0;  /* end quote */
-            }
-          else
-            {
-            *dest++ = '\\'; /* escape quote */
-            *dest++ = *pv;
-            }
-          }
-        else if (quote_flg)
-          {
-          /* global quoting is on */
-
-          *dest++ = '\\';  /* escape quote */
-          *dest++ = *pv;
-          }
-        else
-          {
-          q_ch = (int) * pv;  /* turn local quoting on */
-          }
-
-        break;
-
-      case '\\':
-
-        *dest++ = '\\';  /* escape back-slash */
-        *dest++ = *pv;
-
-        break;
-
-      case '\n':
-
-        *dest++ = '\\';  /* escape newline */
-        *dest++ = *pv;
-
-        break;
-
-      case ',':
-
-        if (q_ch || quote_flg)
-          {
-          *dest++ = '\\';
-          *dest++ = *pv;
-          }
-        else
-          {
-          go = 0;  /* end of value string */
-          }
-
-        break;
-
-      default:
-
-        *dest++ = *pv;
-
-        break;
-      }
-
-    pv++;
-    }  /* END while (go && *pv) */
-
-  *dest = '\0';
-
-  if (q_ch)
-    return(NULL); /* error-unterminated quote */
-
-  return(pv);
-  }
 
 /*
  * The following bunch of functions support the "Interactive Job"
